--- a/vignettes/gettingStarted.Rmd
+++ b/vignettes/gettingStarted.Rmd
@@ -17,28 +17,56 @@ You need 3 things to run a LOLA analysis:
 3. regionDB: A database of region sets to test for enrichment of overlap
 
 
-Let's load an example dataset:
+Let's load an example dataset. The database location should point to a folder that contains collection subfolders:
 
 ```{r Load a regionDB}
 library("LOLA")
 dbPath = system.file("extdata", "hg19", package="LOLA")
-regionDB = loadRegionDB(dbLocation= dbPath)
+regionDB = loadRegionDB(dbPath)
 ```
 
-Load up some sample data
+The regionDB is an R (list) object that has a few elements: 
+
+```{r}
+names(regionDB)
+```
+
+* dbLocation: A string recording the location of the database folder you passed to `loadRegionDB()`.
+* collectionAnno: A `data.table` annotating the collections, with rows corresponding to the rows in your `collection` annotation files in the database.
+* regionAnno: A `data.table` annotating each region set, with rows corresponding to bed files in the database (there is also a `collection` column recording which collection each region set belongs to).
+* regionGRL: A `GRangesList` object holding the actual regions, with one list element per region set, ordered as in `regionAnno`.
+
+Now with the database loaded, let's load up some sample data:
 
 ```{r Load sample user sets and universe}
-data("sample_input", package="LOLA")
-data("sample_universe", package="LOLA")
+data("sample_input", package="LOLA") # load userSet
+data("sample_universe", package="LOLA") # load userUniverse
 ```
 
-Run the enrichment calculation:
+Now we have a GRanges object called `userSet` and a GRanges object called `userUniverse`. This is all we need to run the enrichment calculation:
 
 ```{r Run the calculation}
 locResults = calcLocEnrichment(userSet, userUniverse, regionDB, dbTitle="dbTitle", cores=1)
 ```
 
+calcLocEnrichment tests for pairwise overlap between each user set and each region set in regionDB. It then uses a Fisher's exact test to assess signficance of the overlap. The results are a `data.table` with several columns:
+
+```{r}
+colnames(locResults)
+head(locResults)
+```
+
+Columns `userSet` and `dbSet` are indexes into the respective GRangeList objects, identifying each pairwise comparison. There are a series of columns describing the results of the statistical test, such as `pValueLog`, `logOdds`, and the actual values from the contingency table (`support` is the overlap, and `b`, `c`, and `d` complete the 2x2 table). Rank columns simply rank the tests by `pValueLog`, `logOdds`, or `support`; following these are a series of columns annotating the database regions, depending on how you populated the `index` table in the regionDB folder.
+
+You can explore these results in R by, for example, ranking with different orders:
+
+```{r}
+locResults[order(support, decreasing=TRUE),]
+```
+
+And finally, record the results to file like this:
+
 4. Write out results:
 ```{r Write results}
-writeCombinedEnrichment(locResults, outFolder= "locationResults", includeSplits=TRUE);
+writeCombinedEnrichment(locResults, outFolder= "lolaResults", includeSplits=TRUE);
 ```
