--- a/vignettes/usingLOLACore.Rmd
+++ b/vignettes/usingLOLACore.Rmd
@@ -10,25 +10,25 @@ output: knitr:::html_vignette
 # Using LOLA Core
 (__This vignette is unevaluated because it relies on loading huge database files__)
 
-Most likely, your first goal will be to test your regions of interest for enrichment against as many public datasets as you can get your hands on. To make this easier on you, we've assembled a core database, called LOLA Core, which we curate from many sources. Since LOLA Core is rather large, it's not possible to distribute with the package, and you'll need to download it on your own. A download link to the latest database is kept in the README file at the [LOLA github page](http://github.com/sheffien/LOLA). Start there, downloading the database (all you need for this vignette is the smaller cached database, assuming you also have simpleCache installed).
+Most likely, your first goal will be to test your regions of interest for enrichment against as many public datasets as you can get your hands on. To make this easier on you, we've assembled a core database, called LOLA Core, which we curate from many sources. Since LOLA Core is rather large, it's not possible to distribute with the package, and you'll need to download it on your own. For this vignette you need to download and unpack either the complete or the cached LOLA Core database; a download link is kept in the README file at the [LOLA github page](http://github.com/sheffien/LOLA). Download and unpack the LOLA Core archive into your current working directory.
 
 ### Loading full-scale example data
 
-After downloading and unpacking the LOLA Core archive into your current working directory, load it up like this (this should take under a minute or so on a modern machine).
-
 You'll also need a few region sets of interest. Typically, this will be data you've generated or downloaded and you'll know something about it already; for this vignette, you can download some [example data](http://github.com/sheffien/LOLA) from the same page as LOLA Core. Just for fun, in this vignette I'll call these mystery sets, and the point will be to see what LOLA tells us about them if we have no previous knowledge. Then I'll reveal their true identity at the end of the vignette. 
 
-Load the mystery region sets. LOLA requires the data in GRanges objects, so you can use `fread()` to get a `data.table`, and then convert with this LOLA function dtToGr, or you could use `rtracklayer` to import them as GRanges directly if you prefer. You also need to come up with a "region universe" for the calculation. This can be quite tricky, so there's another vignette dedicated to choosing an appropriate universe. For this vignette, I've provided a reasonable universe (it will likely be applicable for other applications, too). This is just a combined set of all active DNase hypersensitive sites in the genome. This would be a reasonable universe to use for a set of some specific active regulatory elements, like in a ChIP-seq experiment. Since the mystery data in this vignette is all active ChIP-seq data, it's a reasonable universe here.
+To load the mystery region sets. LOLA requires the data in GRanges objects, so you can use `fread()` to get a `data.table`, and then convert with this LOLA function dtToGr, or you could use `rtracklayer` to import them as GRanges directly if you prefer. Or, LOLA now comes with a `readBed` function, which is fast and convenient. You also need to come up with a "region universe" for the calculation. This can be quite tricky, so there's another vignette dedicated to choosing an appropriate universe. For this vignette, I've provided a reasonable universe (it will likely be applicable for other applications, too). This is just a combined set of all active DNase hypersensitive sites in the genome. This would be a reasonable universe to use for a set of some specific active regulatory elements, like in a ChIP-seq experiment. Since the mystery data in this vignette is all active ChIP-seq data, it's a reasonable universe here.
+
+Load up the database and query regions like this (this should take under a minute or so on a modern machine).
 
 ```{r, eval = FALSE}
 library("LOLA")
 
-regionDB = loadRegionDB("regionDB/hg19")
+regionDB = loadRegionDB("LOLACore/hg19")
 
-regionSetA = LOLA:::dtToGr(fread("lola_vignette_data/setA.bed"), "V1", "V2", "V3")
-regionSetB = LOLA:::dtToGr(fread("lola_vignette_data/setB.bed"), "V1", "V2", "V3")
-regionSetC = LOLA:::dtToGr(fread(lola_vignette_data/setC.bed"), "V1", "V2", "V3")
-activeDHS = LOLA:::dtToGr(fread("lola_vignette_data/activeDHS_universe.bed"), "V1", "V2", "V3")
+regionSetA = readBed("lola_vignette_data/setA.bed")
+regionSetB = readBed("lola_vignette_data/setB.bed")
+regionSetC = readBedlola_vignette_data/setC.bed")
+activeDHS = readBed("lola_vignette_data/activeDHS_universe.bed")
 ```
 
 ### Running the enrichment
