--- a/vignettes/gettingStarted.Rmd
+++ b/vignettes/gettingStarted.Rmd
@@ -14,7 +14,6 @@ In this vignette, you'll use small example datasets that come with the LOLA pack
 
 You need 3 things to run a LOLA analysis:
 
-1. regionDB: A database of region sets to test for enrichment of overlap. For this vignette, we have a just a handful of region sets as a database.
 2. userSets: Regions of interest (at least 1 set of regions, a GRanges object, or multiple sets of regions of interest as a GRangesList object)
 3. userUniverse: The set of regions tested for inclusion in your sets of regions of interest (a single GRanges object)
 
@@ -47,10 +46,10 @@ data("sample_universe", package="LOLA") # load userUniverse
 Now we have a GRanges object called `userSet` and a GRanges object called `userUniverse`. This is all we need to run the enrichment calculation. `calcLocEnrichemnt()` will test the overlap between your userSet, and each region set in the regionDB.
 
 ```{r Run the calculation}
-locResults = calcLocEnrichment(userSet, userUniverse, regionDB, cores=1)
+locResults = runLOLA(userSet, userUniverse, regionDB, cores=1)
 ```
 
-calcLocEnrichment tests for pairwise overlap between each user set and each region set in regionDB. It then uses a Fisher's exact test to assess signficance of the overlap. The results are a `data.table` with several columns:
+runLOLA tests for pairwise overlap between each user set and each region set in regionDB. It then uses a Fisher's exact test to assess signficance of the overlap. The results are a `data.table` with several columns:
 
 ```{r}
 colnames(locResults)
