--- a/vignettes/gettingStarted.Rmd
+++ b/vignettes/gettingStarted.Rmd
@@ -14,7 +14,8 @@ In this vignette, you'll use small example datasets that come with the LOLA pack
 
 You need 3 things to run a LOLA analysis:
 
-2. userSets: Regions of interest (at least 1 set of regions, a GRanges object, or multiple sets of regions of interest as a GRangesList object)
+1. A region database. 
+2. userSets: Regions of interest (at least 1 set of regions as a GRanges object, or multiple sets of regions of interest as a GRangesList object)
 3. userUniverse: The set of regions tested for inclusion in your sets of regions of interest (a single GRanges object)
 
 Let's load an example regionDB with `loadRegionDB()`. Here's a small example that comes with LOLA. The database location should point to a folder that contains collection subfolders:
